fix up dark mode stuff

--- a/with-ant-design-app/app/components/navigation/navbar/log-in-modal/LogInModal.module.css
+++ b/with-ant-design-app/app/components/navigation/navbar/log-in-modal/LogInModal.module.css
@@ -71,7 +71,7 @@
 }
 
 .soc-login-icon svg {
-    fill: var(--background-dark-secondary);
+    fill: var(--background-light-main);
     transition: fill 0.48s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -81,7 +81,7 @@
 }
 
 .soc-login-icon:hover svg {
-    fill: var(--background-dark-main);
+    fill: var(--text-brighter);
 }
 
 .soc-login-icon:hover {
